<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kursline</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="http404">Zəhmət olmazsa biraz sonra yenidən cəhd edin</string>
    <string name="writeusToast">Telefon və ya mesaj boş ola bilməz</string>
    <string name="home">Əsas</string>
    <string name="my_account">Kabinet</string>
    <string name="favorites">Seçilmişlər</string>
    <string name="setting">Tənzimləmələr</string>
    <string name="the_most_of_seen">Ən çox baxılanlar</string>
    <string name="select_course">Kurs Seçin</string>
    <string name="filter">Filter</string>
    <string name="filterFromAtoZ">A-dan Z-ə</string>
    <string name="filterforPrice">Qiymətə görə</string>
    <string name="favcoursenotfound">Burada heç bir kurs tapılmadı</string>
    <string name="catagory">Alt Kateqoria</string>
    <string name="category">Kateqoriya</string>
    <string name="region">Region</string>
    <string name="rejim">Rejim</string>
    <string name="contact">Əlaqə</string>
    <string name="gray_text">Şifrəni unutmusunuz?</string>
    <string name="green_text"> Şifrəni yeniləyin</string>
    <string name="deletecourse">Kursu sil</string>
    <string name="editCourse">Redakte et</string>
    <string name="sameCourse">Oxşar kurslar</string>
    <string name="choose_city">Şəhər seçin</string>
    <string name="network_error">Şəbəkə yoxdur</string>
    <string name="check_internet_connection">Zəhmət olmazsa internetə qoşulun</string>
    <string name="card_number">Kart nömrənizi daxil edin</string>
    <string name="elanlari_goster">Elanları göstər</string>
    <string name="myaccount">Mənim hesabım</string>
    <string name="choose_language">Dil seçimi edin</string>
    <string name="help">Kömək</string>
    <string name="courses">Kurslar</string>
    <string name="exit_kursline">Hesabdan çıxmaq</string>
    <string name="user_term">İstifadəçi şərtləri</string>
    <string name="privacy_poliscy">Məxfilik siyasəti</string>
    <string name="Rules">Qaydalar</string>
    <string name="contact_us">Bizimlə əlaqə</string>
    <string name="about_us">Haqqımızda</string>
    <string name="contacts">Əlaqə vasitələri</string>
    <string name="about_vip">Elanınız ana səhifədə və axtarış nəticələrindəki VİP bölməsində təsadüfi qaydada görünəcək</string>
    <string name="pay">Ödə</string>
    <string name="payment">Ödəniş</string>
    <string name="regions">Regionlar</string>
    <string name="kurslar">Kurs</string>
    <string name="tutors">Repititor</string>
    <string name="categories">Kateqoriyalar</string>
    <string name="fromAtoZ">A-dan Z-ə</string>
    <string name="mintomax">Min to Max</string>
    <string name="courseandtutors">Kurs/Repititor</string>
    <string name="price_range">Qiymət aralığı</string>
    <string name="mode">Rejim</string>
    <string name="LOGIN">Daxil olun</string>
    <string name="entermail">Email daxil edin*</string>
    <string name="enterpassword">Şifrə daxil edin*</string>
    <string name="forgetpassword">Şifrəni unutmusunuz?</string>
    <string name="resetpassword"> Şifrəni yeniləyin</string>
    <string name="dontaccount">Hesabınız yoxdur?</string>
    <string name="signup"> Qeydiyyatdan keçin</string>
    <string name="mainuserregister">İstifadəçi hesabı yarat</string>
    <string name="mainbusinessregister"> Biznes hesabı yarat</string>
    <string name="forward_anntxt">İrəli çək</string>
    <string name="agreement">“Ödə” düyməsini sıxmaqla siz kursline.az-ın istifadəçi sözləşməsini qəbul etmiş olursunuz.</string>
    <string name="bank_card">Bank kartı</string>
    <string name="nameString"> Adınızı daxil edin*</string>
    <string name="nameCharacterCount">Ad 3 və 50 simvol arasında olmalıdır</string>
    <string name="passwordCount">Parol ən azı 8 simvol uzunluğunda olmalıdır və ən azı 1 böyük hərf, 1 kiçik hərf, 1 rəqəm və 1 xüsusi simvoldan ibarət olmalıdır.</string>
    <string name="http409String"> Bu nömrə və ya mail ünvanı artıq başqa istifadəçidə istifadə olunur</string>
    <string name="http409Stringupdate"> Bu nömrə, mail ünvanı və ya şirkət adı artıq başqa istifadəçidə istifadə olunur</string>
    <string name="infosWrong"> Məlumatlar doğru deyil</string>
    <string name="registerSuccess"> Qeydiyyat uğurla tamamlandı. Email ünvanınıza təsdiq mesajı göndərildi.</string>
    <string name="registerContinue"> Hesab yaradılır...</string>
    <string name="registerString">Qeydiyyatdan keç</string>
    <string name="phoneString">Telefon nömrəsi daxil edin*</string>
    <string name="userRegister"> İstifadəçi qeydiyyatı</string>
    <string name="businessRegister"> Biznes qeydiyyatı</string>
    <string name="businessName">Şirkət adınızı daxil edin*</string>
    <string name="businessRegisterPhoto">Şirkət loqonuzu daxil edin*</string>
    <string name="businessStatus">Status*</string>
    <string name="businessAbout">Şirkət haqqında*</string>
    <string name="createBusiness">Biznes hesabı yarat</string>
    <string name="busienssNameCharacterCount"> Şirkət adı 3 və 50 simvol arasında olmalıdır</string>
    <string name="addressCharacterCount">Ünvan 3 və 200 simvol arasında olmalıdır</string>
    <string name="aboutCharacterCount">Haqqında 3 və 1500 simvol arasında olmalıdır</string>
    <string name="update_course">Düzəliş etmək</string>
    <string name="name_course">Kursun adı</string>
    <string name="choose_region">Region Seçin</string>
    <string name="kateqoriya_se_in">Kateqoriya Seçin</string>
    <string name="choose_sub">Alt Kateqoriya Seçin</string>
    <string name="about_course">Kurs haqqında</string>
    <string name="add_techer_name">Müəllimləri qeyd edin</string>
    <string name="enter_price">Qiymət daxil edin</string>
    <string name="course_adress">Kursun adresi</string>
    <string name="choose_regime">Rejim Seçin</string>
    <string name="add_photos">Şəkil əlavə edin</string>
    <string name="addcourse">Kursu əlavə et</string>
    <string name="duration_service">Xidmətin müddəti</string>
    <string name="tobusinessreg">Biznes hesabı yarat</string>
    <string name="pending">Gözləmədə olan</string>
    <string name="active">Aktiv kurslar</string>
    <string name="deactive">Deaktiv kurslar</string>
    <string name="notpublish">Dərc edilməmiş kurslar</string>
    <string name="couldnt_find_anycourse">Burada heç bir kurs tapılmadı</string>
    <string name="theinformationdonotmatch">Məlumatlar doğru deyil</string>
    <string name="name">Adınız</string>
    <string name="email">Email</string>
    <string name="telephone_number">Telefon nömrəsi</string>
    <string name="hesab">Hesab</string>
    <string name="d_z_li_et">Düzəliş et</string>
    <string name="gotoAd">Elan yaratmaq üçün</string>
    <string name="businessAccountName">Şirkət adı</string>
    <string name="businessAccountAddress">Address</string>
    <string name="saveChange">Dəyişiklikləri yadda saxla</string>
    <string name="saveSuccesfull">Məlumatlarınız uğurla yeniləndi</string>
    <string name="savingChange">Dəyişiklikləri yadda saxlanılır...</string>
    <string name="new_course">Yeni Kurs</string>
    <string name="writeletter">Məktub yazın</string>
    <string name="enteryourmessage">Mesajınızı qeyd edin</string>
    <string name="onlineTxt">Onlayn</string>
    <string name="offlineTxt">Ənənəvi</string>
    <string name="onOffTxt">Ənənəvi/Onlayn</string>
    <string name="resetTxt">Sıfırla</string>
    <string name="searchAd">Elan axtar</string>
    <string name="searchCourse">Kurs axtar</string>
    <string name="searchTutor">Repititor axtar</string>
    <string name="mailOrpassword">Mail ünvanı və ya parol yanlışdır</string>
    <string name="loginCtn">Giriş edilir...</string>
    <string name="commentSending">Rəyiniz göndərilir...</string>
    <string name="kurslarText">Kurslar</string>
    <string name="tutorText">Repititorlar</string>
    <string name="vipTextAn">VIP elanlar</string>
    <string name="recentTextAn">Son elanlar</string>
    <string name="mostViewHg">Ən çox baxılan elanlar</string>
    <string name="newHg">Yeni elanlar</string>
    <string name="vipHg">VIP elanlar</string>
    <string name="mostViewHgText">ən çox baxılan</string>
    <string name="newHgText">yeni elan</string>
    <string name="vipHgText">VIP elan</string>
    <string name="sendText">Göndər</string>
    <string name="favText">Seçilmişlər</string>
    <string name="backToHome">Əsas ekrana qayıt</string>
    <string name="vipTextTran">VIP kurslar</string>
    <string name="movetextTran">İrəli çəkişmiş kurslar</string>
    <string name="adsNom">Elanın nömrəsi</string>
    <string name="approvalText">Elanınız gözləmədədir. Təsdiqləndikdən sonra görsənəcək.</string>
    <string name="aboutPayment">Elanınız ana səhifədə və axtarış nəticələrindəki VİP bölməsində təsadüfi qaydada görünəcək</string>
    <string name="aboutMoveFRW">Elanınız ana sıhifədə və axtarış nəticələrindəki Son elanlar bölməsində ilk sıralarda görünəcək</string>
</resources>
