<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".view.loginRegister.LoginActivity">



    <ImageView
        android:id="@+id/loginİmage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/login"/>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginİmage"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:text="@string/LOGIN"
        android:textColor="@color/greenColor"
        android:textSize="40dp"
        android:textStyle="bold" />

    <ScrollView
        android:background="@color/white"
        android:layout_below="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="25dp"
                android:id="@+id/emailLoginContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/grayColor1"
                app:hintTextColor="@color/grayColor1"
                android:textColorHint="@color/grayColor1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailLoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textEmailAddress"
                    android:hint="@string/entermail"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLoginContainer"
                android:layout_below="@+id/emailLoginContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/grayColor1"
                app:hintTextColor="@color/grayColor1"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/grayColor1"
                app:passwordToggleTintMode="src_in"
                android:textColorHint="@color/grayColor1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordLoginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textPassword"
                    android:hint="@string/enterpassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/resetPassword"
                android:layout_below="@+id/passwordLoginContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:fontFamily="@font/nunito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetpassword"
                    android:textColor="@color/grayColor1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/createNewPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito"
                    android:text="@string/resetpassword"
                    android:textColor="@color/greenColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/goToRegister"
                android:layout_below="@+id/resetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:fontFamily="@font/nunito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dontaccount"
                    android:textColor="@color/grayColor1"
                    android:textSize="18sp" />

                <TextView
                    android:fontFamily="@font/nunito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="@color/greenColor"
                    android:textSize="18sp" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/goToRegister"
                android:background="@drawable/button_bg"
                android:text="@string/LOGIN"
                android:textAllCaps="false"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enterEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:visibility="gone"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/goToRegister"
                android:background="@drawable/button_bg"
                android:text="Davam et"
                android:textAllCaps="false"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>