<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="16dp"
        android:gravity="center"
        android:text="@string/writeletter"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/greenColor"
        android:textSize="18sp" />
    <RelativeLayout
        android:id="@+id/writeltterRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyPhoneContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/grayColor1"
            app:hintTextColor="@color/grayColor1"
            android:textColorHint="@color/grayColor1"
            app:prefixText="+994 "
            app:prefixTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/companyPhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat"
                android:inputType="phone"
                android:hint="@string/phoneString"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="16dp"
            android:id="@+id/textViewEnterLetter"
            android:gravity="center"
            android:text="@string/enteryourmessage"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/greenColor"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/writeletter"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:fontFamily="@font/nunito"
            android:textSize="16sp"
            android:layout_below="@+id/textViewEnterLetter"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


</LinearLayout>
