<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".view.loginRegister.UserRegisterActivity">

    <ImageView
        android:id="@+id/registerImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/register"/>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerImage"
        android:fontFamily="@font/nunito"
        android:gravity="center_horizontal"
        android:text="@string/userRegister"
        android:textColor="@color/greenColor"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ScrollView
        android:background="@color/white"
        android:layout_below="@+id/registerText"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/grayColor1"
                app:hintTextColor="@color/grayColor1"
                android:textColorHint="@color/grayColor1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textPersonName"
                    android:hint="@string/nameString"/>
                <TextView
                    android:id="@+id/characterCountTextViewUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_below="@+id/nameContainer"
                    style="@style/CharacterCountTextAppearance"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneContainer"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/nameContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/grayColor1"
                app:hintTextColor="@color/grayColor1"
                android:textColorHint="@color/grayColor1"
                app:prefixText="+994 "
                app:prefixTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:inputType="phone"
                    android:hint="@string/phoneString"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mailContainer"
                android:layout_marginTop="10dp"
                android:layout_below="@id/phoneContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/grayColor1"
                app:hintTextColor="@color/grayColor1"
                android:textColorHint="@color/grayColor1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textEmailAddress"
                    android:hint="@string/entermail"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordContainer"
                android:layout_marginTop="10dp"
                android:layout_below="@id/mailContainer"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/grayColor1"
                app:hintTextColor="@color/grayColor1"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/grayColor1"
                app:passwordToggleTintMode="src_in"
                android:textColorHint="@color/grayColor1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:inputType="textPassword"
                    android:hint="@string/enterpassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat"
                android:layout_marginBottom="25dp"
                android:layout_below="@id/passwordContainer"
                android:background="@drawable/button_bg"
                android:text="@string/registerString"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
